[BACKLOG-41352] warning and error showing in log when launching PRD (#1667)